--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: go
 go: 1.13
 
-script:
-        - go test -v ./...
-
 os:
         - linux
         - osx
+
+jobs:
+        include:
+                name: "build"
+                script: go build
+                name: "unit tests"
+                script: go test -v ./...
